--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/d3.v3.min.js"></script>
-    <script src="/js/leaflet.js"></script>
+    <script src="js/leaflet.js"></script>
     <link rel="stylesheet" href="css/leaflet.css" />
   </head>
   <body>
